--- a/sshd.config
+++ b/sshd.config
@@ -114,10 +114,12 @@ AcceptEnv LANG LC_*
 Subsystem	sftp	/usr/lib/openssh/sftp-server
 
 # Example of overriding settings on a per-user basis
-Match User cubes
-ChrootDirectory /var/www
-ForceCommand internal-sftp
+#Match User cubes
+#ChrootDirectory /var/www
+#ForceCommand internal-sftp
 #	X11Forwarding no
 #	AllowTcpForwarding no
 #	PermitTTY no
 #	ForceCommand cvs server
+Match User cubes
+ChrootDirectory /var/www
