--- a/config/zabbix_server.conf
+++ b/config/zabbix_server.conf
@@ -126,7 +126,7 @@ DBUser=zabbix
 #
 # Mandatory: no
 # Default:
-DBPassword=cubes123
+DBPassword=$ZABBIX_PASS
 
 ### Option: DBSocket
 #	Path to MySQL socket.
