--- a/config/zabbix_server.conf
+++ b/config/zabbix_server.conf
@@ -126,7 +126,7 @@ DBUser=zabbix
 #
 # Mandatory: no
 # Default:
-DBPassword=$ZABBIX_PASS
+DBPassword=($MYSQL_ZABBIX_PWD)
 
 ### Option: DBSocket
 #	Path to MySQL socket.
