--- a/config/zabbix_server.conf
+++ b/config/zabbix_server.conf
@@ -126,7 +126,7 @@ DBUser=zabbix
 #
 # Mandatory: no
 # Default:
-DBPassword=$mysql_zabbix_pass
+DBPassword=($mysql_zabbix_pass)
 
 ### Option: DBSocket
 #	Path to MySQL socket.
