--- a/yaml/www_nginx.yaml
+++ b/yaml/www_nginx.yaml
@@ -4,52 +4,45 @@
   tasks:
 
     - name: copy nginx config file
-      copy: src=/root/templates/24sedam.rs.conf dest=/etc/nginx/sites-available/24sedam.rs.conf
+      copy: src=/root/templates/WEBSITE.conf dest=/etc/nginx/sites-available/WEBSITE.rs.conf
 
     - name: enable configuration
       file: >
-        dest=/etc/nginx/sites-enabled/24sedam.rs.conf
-        src=/etc/nginx/sites-available/24sedam.rs.conf
+        dest=/etc/nginx/sites-enabled/WEBSITE.conf
+        src=/etc/nginx/sites-available/WEBSITE.conf
         state=link
     
-    - name: Creates directory 24sedam.rs
+    - name: Creates directory WEBSITE
       file:
-        path: /var/www/24sedam.rs
+        path: /var/www/WEBSITE
         state: directory
         owner: root
         group: root
 
     - name: Creates directory www-root
       file:
-        path: /var/www/24sedam.rs/www-root
+        path: /var/www/WEBSITE/www-root
         state: directory
         owner: cubes
         group: cubes
 
     - name: Creates directory logs
       file:
-        path: /var/www/24sedam.rs/logs
+        path: /var/www/WEBSITE/logs
         state: directory
         owner: root
         group: root
 
-    - name: Creates directory 24sedam-front
-      file:
-        path: /var/www/24sedam.rs/www-root/24sedam-front
-        state: directory
-        owner: cubes
-        group: cubes
-
     - name: Creates directory data
       file:
-        path: /var/www/24sedam.rs/www-root/data
+        path: /var/www/WEBSITE/www-root/data
         state: directory
         owner: cubes
         group: cubes
 
     - name: Creates directory public
       file:
-        path: /var/www/24sedam.rs/www-root/24sedam-front/public
+        path: /var/www/WEBSITE/www-root/public
         state: directory
         owner: cubes
         group: cubes
