--- a/config/zabbix_agentd.conf
+++ b/config/zabbix_agentd.conf
@@ -114,7 +114,7 @@ LogFileSize=0
 # Default:
 # Server=
 
-Server=monitoring.hosting12.cubes.rs
+Server=monitoring
 
 ### Option: ListenPort
 #	Agent will listen on this port for connections from the server.
@@ -155,7 +155,7 @@ Server=monitoring.hosting12.cubes.rs
 # Default:
 # ServerActive=
 
-ServerActive=
+ServerActive=monitoring
 
 ### Option: Hostname
 #	Unique, case sensitive hostname.
